# lib2-temp

./: CMakeLists.txt  flake.nix  lib_b.cpp  lib_b2.cpp  lib_b2.h
install/include/: lib_b.h
install/lib/cmake/lib_b/: lib_bConfig-noconfig.cmake  lib_bConfig.cmake
